--- a/src/pages/learn/learn.html
+++ b/src/pages/learn/learn.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content padding>
-  <word-card [word]="currentWord"></word-card>
+  <word-card #wordCard (onValidate)="onValidate($event)"></word-card>
 </ion-content>
