--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -2,28 +2,68 @@
 
   <ion-navbar>
     <ion-title>Account</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="logout()">
+        <ion-icon name="log-out"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <div padding-top text-center *ngIf="authenticated">
-    <img src="http://www.gravatar.com/avatar?d=mm&s=140">
-    <h2>{{email}}</h2>
+  <img src="http://www.gravatar.com/avatar?d=mm&s=140">
+  <ion-list>
+    <ion-list-header>
+      Personal Information
+    </ion-list-header>
 
-    <ion-list inset>
-      <button ion-item (click)="updatePicture()">Update Picture</button>
-      <button ion-item (click)="changeEmail()">Change Email</button>
-      <button ion-item (click)="changePassword()">Change Password</button>
-      <button ion-item (click)="signOut()">Signout</button>
-    </ion-list>
-  </div>
-  <div padding-top text-center *ngIf="!authenticated">
-    <h2>Please login.</h2>
+    <ion-item (click)="updateName()">
+      <ion-grid>
+        <ion-row>
+          <ion-col col-6> Name </ion-col>
+          <ion-col col-6 *ngIf="userProfile?.displayName">
+            {{userProfile?.displayName}}
+          </ion-col>
+          <ion-col col-6 class="placeholder-profile"
+          *ngIf="!userProfile?.displayName">
+            <span> Tap here to edit. </span>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
 
-    <ion-list inset>
-      <button ion-item (click)="signIn()">Login</button>
-    </ion-list>
-  </div>
+    <ion-item>
+      <ion-label class="dob-label">Date of Birth</ion-label>
+      <ion-datetime displayFormat="MMM D, YYYY" pickerFormat="D MMM YYYY"
+      [(ngModel)]="birthDate" (ionChange)="updateDOB(birthDate)"></ion-datetime>
+    </ion-item>
+
+    <ion-item (click)="updateEmail()">
+      <ion-grid>
+        <ion-row>
+          <ion-col col-6> Email </ion-col>
+          <ion-col col-6 *ngIf="userProfile?.email">
+            {{userProfile?.email}}
+          </ion-col>
+          <ion-col col-6 class="placeholder-profile" *ngIf="!userProfile?.email">
+            <span> Tap here to edit. </span>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+
+    <ion-item (click)="updatePassword()">
+      <ion-grid>
+        <ion-row>
+          <ion-col col-6> Password </ion-col>
+          <ion-col col-6 class="placeholder-profile">
+            <span> Tap here to change. </span>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+  </ion-list>
+
 </ion-content>
