--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -8,49 +8,45 @@
 
 
 <ion-content padding>
-  <form (ngSubmit)="login()" [formGroup]="loginForm">
-    <ion-list inset>
+  <form [formGroup]="loginForm" (submit)="loginWithEmailAndPassword()" novalidate>
+    <ion-item>
+      <ion-label stacked>Email</ion-label>
+      <ion-input formControlName="email" type="email" placeholder="Your email address" [class.invalid]="!loginForm.controls.email.valid && blur">
+      </ion-input>
+    </ion-item>
+    <ion-item class="error-message" *ngIf="!loginForm.controls.email.valid && loginForm.controls.email.touched">
+      <p>Please enter a valid email address.</p>
+    </ion-item>
 
-      <ion-item [ngClass]="{ invalid: emailErrors.hasError('*', ['touched', 'dirty']) }">
-        <ion-input type="text" placeholder="Email" formControlName="email"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label stacked>Password</ion-label>
+      <ion-input formControlName="password" type="password" placeholder="Your password" [class.invalid]="!loginForm.controls.password.valid && blur">
+      </ion-input>
+    </ion-item>
+    <ion-item class="error-message" *ngIf="!loginForm.controls.password.valid && loginForm.controls.password.touched">
+      <p>Your password needs more than 6 characters.</p>
+    </ion-item>
 
-      <div ngxErrors="email" #emailErrors="ngxErrors">
-        <div [ngxError]="['email', 'required']" [when]="['touched', 'dirty']">It should be a valid email</div>
-      </div>
-
-      <ion-item [ngClass]="{ invalid: passwordErrors.hasError('*', ['touched']) }">
-        <ion-input type="password" placeholder="Password" formControlName="password"></ion-input>
-      </ion-item>
-
-      <div ngxErrors="password" #passwordErrors="ngxErrors">
-        <div [ngxError]="['minlength', 'required']" [when]="['touched']">It should be at least 5 characters</div>
-      </div>
-    </ion-list>
-
-    <div padding-horizontal>
-      <div class="form-error">{{loginError}}</div>
-
-      <button ion-button full type="submit" [disabled]="!loginForm.valid">Log in</button>
-      <div class="login-footer">
-        <p>
-          <a href="#">Forgot password?</a>
-          If you're a new user, please sign up.
-        </p>
-      </div>
-
-      <ion-list>
-
-        <button ion-button icon-left block clear (click)="loginWithGoogle()">
-          <ion-icon name="logo-google"></ion-icon>
-          Log in with Google
-        </button>
-
-        <button ion-button icon-left block clear (click)="signup()">
-          <ion-icon name="person-add"></ion-icon>
-          Sign up
-        </button>
-      </ion-list>
+    <div paddings>
+      <button ion-button block type="submit" [disabled]="!loginForm.valid">
+        Log in
+      </button>
     </div>
   </form>
+
+  <ion-list>
+    <button ion-button icon-left block clear (click)="loginWithGoogle()">
+      <ion-icon name="logo-google"></ion-icon>
+      Log in with Google
+    </button>
+
+    <button ion-button block clear (click)="goToSignup()">
+      Create a new account
+    </button>
+
+    <button ion-button block clear (click)="goToResetPassword()">
+      I forgot my password :(
+    </button>
+  </ion-list>
+
 </ion-content>
