--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,37 +1,31 @@
 <ion-header>
-
   <ion-navbar>
     <ion-title>Signup</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-  <form (ngSubmit)="signup()" [formGroup]="form">
-    <ion-list inset>
+  <form [formGroup]="signupForm" (submit)="signupUser()" novalidate>
+    <ion-item>
+      <ion-label stacked>Email</ion-label>
+      <ion-input formControlName="email" type="email" placeholder="Your email address" [class.invalid]="!signupForm.controls.email.valid && blur">
+      </ion-input>
+    </ion-item>
+    <ion-item class="error-message" *ngIf="!signupForm.controls.email.valid && signupForm.controls.email.touched">
+      <p>Please enter a valid email.</p>
+    </ion-item>
 
-      <ion-item [ngClass]="{ invalid: emailErrors.hasError('*', ['touched']) }">
-        <ion-input type="text" placeholder="Email" formControlName="email"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label stacked>Password</ion-label>
+      <ion-input formControlName="password" type="password" placeholder="Your password" [class.invalid]="!signupForm.controls.password.valid && blur">
+      </ion-input>
+    </ion-item>
+    <ion-item class="error-message" *ngIf="!signupForm.controls.password.valid&& signupForm.controls.password.touched">
+      <p>Your password needs more than 6 characters.</p>
+    </ion-item>
 
-      <div ngxErrors="email" #emailErrors="ngxErrors">
-        <div [ngxError]="['email', 'required']" [when]="['touched']">It should be a valid email</div>
-      </div>
-
-      <ion-item [ngClass]="{ invalid: passwordErrors.hasError('*', ['touched']) }">
-        <ion-input type="password" placeholder="Password" formControlName="password"></ion-input>
-      </ion-item>
-
-      <div ngxErrors="password" #passwordErrors="ngxErrors">
-        <div [ngxError]="['minlength', 'required']" [when]="['touched']">It should be at least 6 characters</div>
-      </div>
-    </ion-list>
-
-    <div padding-horizontal>
-      <div class="form-error">{{signupError}}</div>
-
-      <button ion-button full type="submit" [disabled]="!form.valid">Sign up</button>
-    </div>
+    <button ion-button block type="submit" [disabled]="!signupForm.valid">
+      Create an Account
+    </button>
   </form>
 </ion-content>
