dictionaries partialy moved to firebase

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,7 +17,7 @@
 
       <button ion-item (click)="goToLearn(dictionary)">
         <h3>{{dictionary.name}}</h3>
-        <p>{{dictionary.wordsLearned}} / {{dictionary.words.length}}</p>
+        <p>{{dictionary.wordsLearned}} / {{dictionary.totalWords}}</p>
       </button>
 
       <ion-item-options>
