--- a/src/pages/learn/learn.html
+++ b/src/pages/learn/learn.html
@@ -8,6 +8,6 @@
   <word-card #wordCard (onValidate)="onValidate($event)"></word-card>
 
   <div paddings>
-    <p>{{dictionary?.wordsLearned}} / {{totalWords}}</p>
+    <p>{{dictionary?.wordsLearned}} / {{dictionary?.totalWords}}</p>
   </div>
 </ion-content>
