AngularFire2: all pages moved to

--- a/src/pages/statistics/statistics.html
+++ b/src/pages/statistics/statistics.html
@@ -24,6 +24,8 @@
           <p padding>{{word?.transcription}}</p>
 
           <h3 padding-horizontal>{{word?.partOfSpeech}}: {{word?.category | lowercase}}</h3>
+          
+          <h2 padding>{{word?.translation}}</h2>
         </expandable>
 
         <p padding-horizontal>Counter: {{word.count}} | Errors: {{word.errors}}</p>
