--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="theme-color" content="#000000"/>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -35,6 +36,7 @@
     </head>
 
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 
